# snf

./: CMakeLists.txt  Makefile  lookup.h  main.c  snowflake.h
tests/: lassert.h  log.h  test_sf_map.c
